# llm_wiki

./: .gitignore  ANCA-AAV-treatment-structured.json  CLAUDE.md  README.md  plan.md  test_agentic_grounding.py  test_assess_generate.py  test_emr_mcp.py
app/: .env.example  README.md  config.py  pyproject.toml
app/backend/: cancellation.py  config.py  database.py  dependencies.py  main.py  state.py
app/backend/routers/: assess.py  chat.py  clinical_assess.py  clinical_rules.py  dashboard.py  graph.py  ingest.py  kbs.py  learn.py  logs.py  mopup.py  order_gen.py  resolve.py  validation_runner.py  viva.py  viva_batch.py  vm.py  wiki.py
app/backend/services/: ab_pipeline.py  activity_log.py  assess_pipeline.py  canonical_registry.py  chat_pipeline.py  clinical_assess_pipeline.py  defrag_pipeline.py  extractor.py  fill_sections_pipeline.py  gap_resolver.py  index_sync.py  ingest_pipeline.py  learn_pipeline.py  llm_client.py  log_capture.py  mopup_pipeline.py  order_gen_pipeline.py  order_rules.json  order_safety_annotator.py  page_metrics.py  page_templates.py  provenance_logger.py  quality_scorer.py  resolve_service.py  scenario_catalog.py  token_tracker.py  vector_store.py  viva_batch_pipeline.py  viva_session.py  viva_simulator.py  viva_student_agent.py  viva_teacher.py
app/backend/services/emr/: __init__.py  db.py  orderables.py  patient.py
app/frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js
app/frontend/src/: App.jsx  AppStateContext.jsx  api.js  index.css
app/frontend/src/components/: CostBadge.jsx  Layout.jsx  (+1 more)
wiki/: log.md  (+2 more)
(+127 files in other folders)
