[project]
name = "llm-wiki-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "anthropic>=0.28.0",
    "pymupdf>=1.24.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "google-genai>=1.0.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "stagehand>=3.0.0",
    "playwright>=1.40.0",
]
